Load logistic model coefficients from disk
